--- a/css/main.css
+++ b/css/main.css
@@ -560,6 +560,38 @@ Ensure the default browser behavior of the `hidden` attribute.
   top: -13rem;
 }
 
+.left-80 {
+  left: 20rem;
+}
+
+.bottom-40 {
+  bottom: 10rem;
+}
+
+.bottom-20 {
+  bottom: 5rem;
+}
+
+.bottom-10 {
+  bottom: 2.5rem;
+}
+
+.top-10 {
+  top: 2.5rem;
+}
+
+.-top-32 {
+  top: -8rem;
+}
+
+.-top-48 {
+  top: -12rem;
+}
+
+.-top-56 {
+  top: -14rem;
+}
+
 .z-30 {
   z-index: 30;
 }
@@ -985,6 +1017,22 @@ Ensure the default browser behavior of the `hidden` attribute.
   min-width: 58.5rem;
 }
 
+.min-w-\[50rem\] {
+  min-width: 50rem;
+}
+
+.min-w-\[44rem\] {
+  min-width: 44rem;
+}
+
+.min-w-\[48rem\] {
+  min-width: 48rem;
+}
+
+.min-w-\[46rem\] {
+  min-width: 46rem;
+}
+
 .max-w-\[60rem\] {
   max-width: 60rem;
 }
@@ -999,6 +1047,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .flex-col {
   flex-direction: column;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
 }
 
 .flex-nowrap {
