--- a/css/normalize.css
+++ b/css/normalize.css
@@ -11,6 +11,7 @@
 html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
+  max-width: 100vw;
 }
 
 /* Sections
@@ -22,6 +23,7 @@ html {
 
 body {
   margin: 0;
+  max-width: 100vw;
 }
 
 /**
